# toujours_skateboarding_salvo_back_api_rest

./: .gitignore  Cargo.toml  docker-compose.yaml  init-database.sh  test.html  test.json
api/: Cargo.toml
api/src/: handlers.rs  lib.rs  root.rs  server.rs  struct.rs
auth/: Cargo.toml
auth/src/: jwt_auth.rs
database_connection/: Cargo.toml
database_connection/src/: db_connection.rs  lib.rs
entities/: Cargo.toml
entities/src/: data.rs  lib.rs  mod.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230301_124434_user_table.rs  m20230416_151948_data.rs
queries/: Cargo.toml
queries/src/: data_queries.rs  lib.rs  user_queries.rs
scraper/: Cargo.toml
scraper/src/: lib.rs  thrasher_latest_videos.rs  youtube_thrasher_latest_videos.rs
src/: main.rs
structs/: Cargo.toml
structs/src/: data.rs  lib.rs  user.rs
