[package]
name = "toujours_skateboarding_salvo_back_api_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [".", "api", "database_connection","auth" , "migration", "queries", "entities", "scraper"]


[dependencies]
api = { path = "api" }
database_connection = { path = "database_connection" }
migration = { path = "migration" }
queries = { path = "queries" }
entities = { path = "entities" }
auth =  {path = "auth" }
scraper = { path = "scraper" }
structs = { path = "structs" }

[workspace.dependencies]
tokio = { version = "^1", features = ["macros"] }
futures = "^0.3"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-json", "with-chrono" ] }
sea-orm-migration = "^0"
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.93"
bcrypt = "^0.14"
