[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "*"
anyhow = "1"
tokio = { version = "^1", features = ["macros"] }
database_connection = { path = "../database_connection" }
serde = "^1"
sea-orm-migration = "^0"
serde_json = "^1"
tracing-subscriber = "0.3"
jsonwebtoken = "8.0"
auth= { path = "../auth" }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-json", "with-chrono" ] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
queries = { path = "../queries" }
entities = { path = "../entities" }
migration = { path = "../migration" }
scraper =  { path = "../scraper" }
structs = { path = "../structs"}