[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
jsonwebtoken = "8.0"
salvo = { version = "*", features = ["anyhow", "jwt-auth"] }
serde = "1"
serde_json = "^1"
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
entities= { path = "../entities" }
queries= { path = "../queries" }
database_connection = { path = "../database_connection" }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-json", "with-chrono" ] }